[package]
name = "launchcart_formhandler_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "launchcart_formhandler_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.34.0"
wasm_components_ex = {path = "../../../wasm_components_ex/wasm-components-ex"}
once_cell = "1.19.0"
rand = "0.8.5"
wasmtime = "25.0.0"
wasmtime-wasi = "25.0.0"
wasmtime-wasi-http = "25.0.0"
wasi-common = "25.0.0"
wiggle = "25.0.0"
wat = "1.217.0"
